# lunch-menu

./: .gitignore  App.py  Main.py  README.md  Untitled.ipynb  lunchmenu.ipynb  pyproject.toml
note/: crud.ipynb  kwargs.ipynb  melt.ipynb
pages/: 1_input.py  9_old.py  Check_Agent.py
src/lunch_menu/: db.py
